# tinto-panel

./: .clang-format  .gitignore  CMakeLists.txt  README.org
config-example/: tinto.conf
sample/: tinto.conf
src/: config.c  config.h  panel.c  panel.h  server.c  server.h  tint.c  tinto.c
src/battery/: battery.c  battery.h
src/clock/: clock.c  clock.h
src/launcher/: launcher.c  launcher.h  xsettings-client.c  xsettings-client.h  xsettings-common.c  xsettings-common.h
src/systray/: systraybar.c  systraybar.h
src/taskbar/: task.c  task.h  taskbar.c  taskbar.h  taskbarname.c  taskbarname.h
src/tintoconf/: CMakeLists.txt  main.c  main.h  properties.c  properties.h  properties_rw.c  properties_rw.h  theme_view.c  theme_view.h  tint2conf  tintoconf
src/tooltip/: tooltip.c  tooltip.h
src/util/: area.c  area.h  color.c  color.h  common.c  common.h  debug.c  debug.h  timer.c  timer.h  window.c  window.h
